Add Bitmap Marshal

--- a/ImagePixels/ImagePixels.csproj
+++ b/ImagePixels/ImagePixels.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitmapImage\BitmapImageEx.cs" />
-    <Compile Include="Drawing\BitmapEx.cs" />
+    <Compile Include="Drawing\Bitmap1.cs" />
     <Compile Include="Common\Gamut.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
