--- a/ImagePixels/ImagePixels.csproj
+++ b/ImagePixels/ImagePixels.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -52,6 +53,7 @@
     <Compile Include="BitmapImage\BitmapImageEx.cs" />
     <Compile Include="Drawing\Bitmap1.cs" />
     <Compile Include="Common\Gamut.cs" />
+    <Compile Include="Drawing\Bitmap2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
