Fixed class names

--- a/ImagePixels/ImagePixels.csproj
+++ b/ImagePixels/ImagePixels.csproj
@@ -64,12 +64,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BitmapImage\BitmapImageEx.cs" />
-    <Compile Include="Drawing\Bitmap1.cs" />
+    <Compile Include="Drawing\PixelReader0.cs" />
+    <Compile Include="Drawing\PixelReader1.cs" />
     <Compile Include="Common\Gamut.cs" />
-    <Compile Include="Drawing\Bitmap2.cs" />
-    <Compile Include="Drawing\Bitmap3.cs" />
-    <Compile Include="Drawing\Bitmap4.cs" />
+    <Compile Include="Drawing\PixelReader2.cs" />
+    <Compile Include="Drawing\PixelReader3.cs" />
+    <Compile Include="Drawing\PixelReader4.cs" />
+    <Compile Include="IPixelReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
