--- a/ThosoImage/ThosoImage.csproj
+++ b/ThosoImage/ThosoImage.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Drawing.Common" Version="4.6.0-preview.18571.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
