--- a/03_PrismDispose/PrismDispose.Module1/PrismDispose.Module1.csproj
+++ b/03_PrismDispose/PrismDispose.Module1/PrismDispose.Module1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D2DF1575-195D-459F-A971-2B6CCD736A54}</ProjectGuid>
+    <ProjectGuid>{11F1C217-4D4C-4628-9A78-74B3A6939837}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PrismDropNavigation.TabItem</RootNamespace>
-    <AssemblyName>PrismDropNavigation.TabItem</AssemblyName>
+    <RootNamespace>PrismDispose.Module1</RootNamespace>
+    <AssemblyName>PrismDispose.Module1</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -49,7 +49,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TabItemModule.cs" />
+    <Compile Include="Module1Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -63,14 +63,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="ViewModels\ITabItemViewModel.cs" />
-    <Compile Include="ViewModels\TabItemDoubleViewModel.cs" />
-    <Compile Include="ViewModels\TabItemSingleViewModel.cs" />
-    <Compile Include="Views\TabItemDouble.xaml.cs">
-      <DependentUpon>TabItemDouble.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\TabItemSingle.xaml.cs">
-      <DependentUpon>TabItemSingle.xaml</DependentUpon>
+    <Compile Include="ViewModels\ViewAViewModel.cs" />
+    <Compile Include="Views\ViewA.xaml.cs">
+      <DependentUpon>ViewA.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -84,22 +79,12 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Page Include="Views\TabItemDouble.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\TabItemSingle.xaml">
+    <Page Include="Views\ViewA.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Prism.Core">
-      <Version>7.2.0.708-pre</Version>
-    </PackageReference>
-    <PackageReference Include="Prism.Unity">
-      <Version>7.2.0.708-pre</Version>
-    </PackageReference>
     <PackageReference Include="Prism.Wpf" Version="7.2.0.708-pre" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
