--- a/03_PrismDispose/PrismDispose/PrismDispose.csproj
+++ b/03_PrismDispose/PrismDispose/PrismDispose.csproj
@@ -120,7 +120,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\03_PrismDispose\PrismDispose.Module1\PrismDispose.Module1.csproj">
+    <ProjectReference Include="..\PrismDispose.Module1\PrismDispose.Module1.csproj">
       <Project>{11f1c217-4d4c-4628-9a78-74b3a6939837}</Project>
       <Name>PrismDispose.Module1</Name>
     </ProjectReference>
