--- a/04_OxyPlotInspector/OxyPlotInspector/packages.config
+++ b/04_OxyPlotInspector/OxyPlotInspector/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="2.0.0-unstable1035" targetFramework="net461" />
+  <package id="OxyPlot.Wpf" version="2.0.0-unstable1035" targetFramework="net461" />
   <package id="Prism.Core" version="7.2.0.708-pre" targetFramework="net461" />
   <package id="Prism.Unity" version="7.2.0.708-pre" targetFramework="net461" />
   <package id="Prism.Wpf" version="7.2.0.708-pre" targetFramework="net461" />
