--- a/04_OxyPlotInspector/OxyPlotInspector/packages.config
+++ b/04_OxyPlotInspector/OxyPlotInspector/packages.config
@@ -8,6 +8,7 @@
   <package id="Prism.Wpf" version="7.2.0.708-pre" targetFramework="net461" />
   <package id="ReactiveProperty" version="5.3.2" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.6.0-preview.18571.3" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Reactive" version="4.1.2" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
