--- a/05_SwitchContext/SwitchContext/SwitchContext.csproj
+++ b/05_SwitchContext/SwitchContext/SwitchContext.csproj
@@ -102,6 +102,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Common\ApplicationCommands.cs" />
+    <Compile Include="Models\MainImages.cs" />
     <Compile Include="ViewModels\DoubleImageTabItemViewModel.cs" />
     <Compile Include="ViewModels\ImagePanelViewModel.cs" />
     <Compile Include="ViewModels\SingleImageTabItemViewModel.cs" />
