Add ListBox ResourceDictionary

--- a/05_SwitchContext/SwitchContext/SwitchContext.csproj
+++ b/05_SwitchContext/SwitchContext/SwitchContext.csproj
@@ -143,6 +143,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\ResourceDictionaries\ListBoxStyleDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\SingleImageTabItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
