--- a/05_SwitchContext/SwitchContext2/SwitchContext2.csproj
+++ b/05_SwitchContext/SwitchContext2/SwitchContext2.csproj
@@ -57,6 +57,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Common\ApplicationCommands.cs" />
+    <Compile Include="Common\RegionNames.cs" />
     <Compile Include="Models\MainImage.cs" />
     <Compile Include="Models\MainImages.cs" />
     <Compile Include="Models\ModelContext.cs" />
