--- a/05_SwitchContext/SwitchContext2/SwitchContext2.csproj
+++ b/05_SwitchContext/SwitchContext2/SwitchContext2.csproj
@@ -99,9 +99,9 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\ResourceDictionaries\ListBoxStyleDictionary.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="Views\ResourceDictionaries\SeparateBorderStyle.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\SingleImageTabItem.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -157,5 +157,6 @@
       <Name>ThosoImage</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
