Add SelectedItem Binding

--- a/06_Virtualization/VirtualizationListItems/VirtualizationListItems.csproj
+++ b/06_Virtualization/VirtualizationListItems/VirtualizationListItems.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Models\ImageSources.cs" />
     <Compile Include="ViewModels\ThumbnailListViewModel.cs" />
     <Compile Include="Views\FastCanvas.cs" />
+    <Compile Include="Views\ScrollChangedEventToViewportConverter.cs" />
     <Compile Include="Views\ThumbnailList.xaml.cs">
       <DependentUpon>ThumbnailList.xaml</DependentUpon>
     </Compile>
