delete language folders

--- a/07_MetroWindow/MetroWindow/MetroWindow.csproj
+++ b/07_MetroWindow/MetroWindow/MetroWindow.csproj
@@ -109,4 +109,8 @@
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>rd /s /q "de" "en" "es" "fr" "hu" "it" "ja" "ko" "pr-br" "ro" "pt-br" "ru" "sv" "zh-hans" "zh-hant"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
