Add Sampling Frame Control

--- a/08_ImageFunctions/ZoomThumbInterlocking2/ZoomThumbInterlocking2.csproj
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/ZoomThumbInterlocking2.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Models\ViewSettings.cs" />
     <Compile Include="ViewModels\EventConverters\DropEventToUriConverter.cs" />
     <Compile Include="ViewModels\ImageScrollControlViewModel.cs" />
+    <Compile Include="Views\Behaviors\MovableFrameBehavior.cs" />
     <Compile Include="Views\Common\ViewHelper.cs" />
     <Compile Include="Views\Behaviors\ImageBitmapScalingBehavior.cs" />
     <Compile Include="Views\Controls\ImageOverlapSamplingFrame.xaml.cs">
