--- a/08_ImageFunctions/ZoomThumbInterlocking2/ZoomThumbInterlocking2.csproj
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/ZoomThumbInterlocking2.csproj
@@ -106,6 +106,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Common\MyCompositeDisposable.cs" />
     <Compile Include="Models\MainImage.cs" />
     <Compile Include="Models\MainImages.cs" />
     <Compile Include="Models\ViewSettings.cs" />
