--- a/08_ImageFunctions/ZoomThumbInterlocking2/ZoomThumbInterlocking2.csproj
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/ZoomThumbInterlocking2.csproj
@@ -113,6 +113,8 @@
     <Compile Include="ViewModels\EventConverters\DropEventToUriConverter.cs" />
     <Compile Include="ViewModels\ImageScrollControlViewModel.cs" />
     <Compile Include="Views\Behaviors\MovableFrameBehavior.cs" />
+    <Compile Include="Views\Common\UIEventObservableExtensions.cs" />
+    <Compile Include="Views\Common\MouseObservableExtensions.cs" />
     <Compile Include="Views\Common\ViewHelper.cs" />
     <Compile Include="Views\Behaviors\ImageBitmapScalingBehavior.cs" />
     <Compile Include="Views\Controls\ImageOverlapSamplingFrame.xaml.cs">
