--- a/08_ImageFunctions/ZoomThumbInterlocking2/App.config
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/App.config
@@ -9,6 +9,22 @@
         <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Prism" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.2.0.1347" newVersion="7.2.0.1347" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Prism.Wpf" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.2.0.1347" newVersion="7.2.0.1347" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
