--- a/ImageMetaExtractorApp/packages.config
+++ b/ImageMetaExtractorApp/packages.config
@@ -1,11 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
+  <package id="MetadataExtractor" version="2.1.0" targetFramework="net461" />
   <package id="Prism.Core" version="7.2.0.1347-pre" targetFramework="net461" />
   <package id="Prism.Unity" version="7.2.0.1347-pre" targetFramework="net461" />
   <package id="Prism.Wpf" version="7.2.0.1347-pre" targetFramework="net461" />
+  <package id="ReactiveProperty" version="5.6.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
+  <package id="System.Reactive" version="4.1.5" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Unity.Abstractions" version="4.1.3" targetFramework="net461" />
   <package id="Unity.Container" version="5.10.3" targetFramework="net461" />
+  <package id="XmpCore" version="5.1.3.1" targetFramework="net461" />
 </packages>
