--- a/ImageMetaExtractorApp/ImageMetaExtractorApp.csproj
+++ b/ImageMetaExtractorApp/ImageMetaExtractorApp.csproj
@@ -161,6 +161,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="documents\Design_FavMeta.xlsx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
